# ESP32-Cheap-Yellow-Display

./: .gitignore  ADDONS.md  HARDWARE.md  LICENSE  MEDIA.md  PINS.md  PROJECTS.md  README.md  SETUP.md  TROUBLESHOOTING.md  cyd.md  library.json
.github/: FUNDING.yml
.github/pages/: cyd.json  index.html  manifest.json
.github/workflows/: arduino-cli.yml  main.yml
3dModels/: README.md  Simple CYD stand leg - Portrait.stl
3dModels/Havenview_CYD_CAD/: Cheap Yellow Display v16.f3d  Cheap Yellow Display v16.step  README.md
3dModels/Jonnys_CYD_Stand_Leg/: CYD Stand Leg Landscape.3mf  CYD Stand Leg Landscape.f3d  CYD Stand Leg Landscape.step  CYD Stand Leg Portrait.3mf  CYD Stand Leg Portrait.f3d  CYD Stand Leg Portrait.step  README.md
3dModels/Markus_CYD_Simple_Case/: Markus CYD Box Bottom.stl  Markus CYD Box Cover.stl  Markus CYD Box.3mf  readme.md
3dModels/Mechaelas_CYD_Snap_Case/: CYD Case Top.stl  CYD Slim Snap Bottom.stl
3dModels/Simple_CYD_ Stand_Leg/: README.md
3dModels/laser cut CYD case/: README.md
DisplayConfig/: User_Setup.h
DisplayConfig/CYD2USB/: User_Setup.h
Examples/: README.md
Examples/1-HelloWorld/: 1-HelloWorld.ino
Examples/3-SDCardTest/: 3-SDCardTest.ino
Examples/4-AutoBrightnessTest/: 4-AutoBrightnessTest.ino
Examples/Basics/1-HelloWorld/: 1-HelloWorld.ino  platformio.ini
Examples/Basics/2-TouchTest/: 2-TouchTest.ino  platformio.ini
Examples/Basics/3-SDCardTest/: 3-SDCardTest.ino  platformio.ini
Examples/Basics/4-BacklightControlTest/: 4-BacklightControlTest.ino  platformio.ini
Examples/Basics/5-LDRTest/: 5-LDRTest.ino  platformio.ini
Examples/Basics/6-LEDTest/: 6-LEDTest.ino  platformio.ini
Examples/Basics/7-HelloRadio/: 7-HelloRadio.ino  platformio.ini
Examples/Basics/8-AutomaticBrightnessAdjustment/: platformio.ini
Examples/Basics/8-Buttons/: 8-Buttons.ino  platformio.ini
Examples/ESP-IDF/: README.md
Examples/ESP-IDF/LCD/: CMakeLists.txt
Examples/ESP-IDF/LCD_Touch/: .gitignore  CMakeLists.txt  Makefile
Examples/ESP-IDF/LVGL/: CMakeLists.txt  Makefile  README.md  sdkconfig
Examples/ESP-IDF/LVGL/components/lvgl_esp32_drivers/lvgl_tft/: CMakeLists.txt  EVE.h  EVE_commands.c  EVE_commands.h  EVE_config.h  FT81x.c  FT81x.h  Kconfig  component.mk  disp_driver.c  disp_driver.h  disp_spi.c  disp_spi.h  hx8357.c  hx8357.h  il3820.c  il3820.h  ili9341.c  ili9341.h  ili9481.c  ili9481.h  ili9486.c  ili9486.h  ili9488.c  ili9488.h  ra8875.c  ra8875.h  sh1107.c  sh1107.h  ssd1306.c  ssd1306.h  st7735s.c  st7735s.h  st7789.c  st7789.h
Examples/ESP-IDF/LVGL/components/lvgl_esp32_drivers/lvgl_touch/: CMakeLists.txt  FT81x.h  Kconfig  adcraw.c  adcraw.h  component.mk  ft6x36.c  ft6x36.h  ra8875_touch.c  ra8875_touch.h  stmpe610.h  touch_driver.c  touch_driver.h  tp_i2c.c  tp_i2c.h  xpt2046.c  xpt2046.h
Examples/ESP-IDF/LVGL/main/: CMakeLists.txt  component.mk  main.c
Examples/ESP-IDF/LVGL9/: CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
Examples/ESPHome/: README.md
Examples/ESPHome/1-Helloworld/: yellowtft1.yaml
Examples/ESPHome/2-ESPHomeClock/: yellowtft1.yaml
Examples/ESPHome/3-RGBLED/: yellowtft1.yaml
Examples/ESPHome/4-TouchDemo/: yellowtft1.yaml
Examples/ESPHome/5-TemperatureGraph/: yellowtft1.yaml
Examples/ESPHome/6-VariousFeatures/: yellowtft1.yaml
Examples/ESPHome/7-ExtendedTouchDemo/: yellowtft1.yaml
Examples/InputTests/ExternalButtonTest/: ExternalButtonTest.ino
Examples/InputTests/NunchuckTest/: NunchuckTest.ino
Examples/LVGL/: README.md
Examples/LVGL/LVGL_Arduino/: LVGL_Arduino.ino
Examples/LVGL8/: README.md  lv_conf.h
Examples/LVGL8/LVGL_Arduino/: LVGL_Arduino.ino
Examples/LVGL9/: README.md  platformio.ini
Examples/LVGL9/LVGL_Arduino/: LVGL_Arduino.ino
Examples/LVGL9/LVGL_plus_LED/: LVGL_plus_LED.ino
Examples/Micropython/: Micropython.md  demo.py
Examples/NanoFramework/: .gitignore  Readme.md
Examples/NanoFramework/Display Draw Blocks/: DrawBlocks.nfproj  DrawBlocks.sln  Program.cs  packages.config
Examples/NanoFramework/Display Fonts and Graphics/: BitmapFile.cs  Program.cs  Resource.Designer.cs  Resource.resx  ScreenTest3.nfproj  ScreenTest3.sln  packages.config
Examples/NanoFramework/Ili9341/: Ili9341.cs  nanoFramework.Graphics.Ili9341.nfproj  packages.config  packages.lock.json
Examples/NanoFramework/RGB LED Blink/: Blinky.nfproj  Blinky.sln  Program.cs
Examples/NanoFramework/RGB LED Fade/: PWM.nfproj  PWM.sln  Program.cs  packages.config
Examples/Projects/BinaryClock/: BinaryClock.ino  README.md  User_Setup.h
Examples/Projects/LeetCodeDailyQuestion/: LeetCodeDailyQuestion.ino  README.md
Examples/Projects/PiDay/: PiDay.ino  README.md  User_Setup.h
Examples/Projects/RollingClock/: .gitignore  Digit.cpp  Digit.h  README.md  RollingClock.ino  platformio.ini
Examples/Projects/RollingClockWithWifiManager/: .gitignore  README.md  platformio.ini
Examples/Projects/Slideshow/: 1-Slideshow.ino  platformio.ini
Examples/Rust/: README.md
Examples/Rust/1-HelloWorld/: .gitignore  Cargo.toml  build.rs  sdkconfig.defaults
Examples/Rust/1-HelloWorld/.cargo/: config.toml
Examples/Rust/1-HelloWorld/src/: main.rs
Examples/openHASP/: README.md
Hardware/SDBreakoutCard/: Readme.md
Hardware/SDtoNFC/: Readme.md
Mods/: README.md
OriginalDocumentation/: Readme.md
Tools/: README.md
Tools/SDFmt/: README.md  SDFmt.ino  platformio.ini
Variants/: README.md
Variants/3248S035C/Examples/1-Draw/touchscreen/: Cargo.toml  README.md
Variants/3248S035C/Examples/1-Draw/touchscreen/src/: lib.rs  sdl.rs  web.rs
Variants/3248S035C/Examples/1-Draw/touchscreen/src/xpt2046/: mod.rs
Variants/3248S035C/Examples/1-Draw/touchscreen/src/xpt2046/spi/: control_byte.rs  mod.rs
Variants/E32R40T/: README.md
(+177 files in other folders)
